--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                             break;
 
                     }
-                    document.querySelector('.file-name').innerHTML = '文件路径：'path;
+                    document.querySelector('.file-name').innerHTML = '文件路径：' + path;
                     document.querySelector('.btn.download').addEventListener('click',
                         () => location.href = url
                     );
