--- a/index.html
+++ b/index.html
@@ -462,6 +462,12 @@
         .password {
             padding-top: 3em;
         }
+        .left,.right {
+            overflow-y: hidden;
+        }
+        .left:hover,.right:hover {
+            overflow-y: auto;
+        }
         .password button {
             vertical-align: middle;
             height: 2.5em;
