--- a/index.html
+++ b/index.html
@@ -463,10 +463,10 @@
             padding-top: 3em;
         }
         .left,.right {
-            overflow-y: hidden;
+            overflow: hidden;
         }
         .left:hover,.right:hover {
-            overflow-y: auto;
+            overflow: auto;
         }
         .password button {
             vertical-align: middle;
