--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,7 @@
 							let pdfsrc = document.createElement('embed');
 							pdfsrc.setAttribute('id', 'content-pdf');
 							pdfsrc.setAttribute('style', 'width: 100%; height: 100%; margin:0px;');
+							pdfsrc.setAttribute('type', 'application/pdf');
 							pdfsrc.setAttribute('src', url);
 							pdfviewer.append(pdfsrc);
 							content.innerHTML = '';
@@ -1427,7 +1428,7 @@
 			</div>
 		</div>
 	</div>
-	<script>console.log('Ver:202001071413');</script>
+	<script>console.log('Ver:202001071417');</script>
 </body>
 
 </html>
