--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<link href="//s0.pstatp.com/cdn/expire-1-M/highlight.js/9.15.6/styles/github.min.css" rel="stylesheet" />
 	<link href="//s0.pstatp.com/cdn/expire-1-M/github-markdown-css/3.0.1/github-markdown.min.css" rel="stylesheet" />
 	<script src="//s0.pstatp.com/cdn/expire-1-M/jquery/3.4.0/jquery.min.js"></script>
+	<script src="//s0.pstatp.com/cdn/expire-1-M/pdf.js/2.2.2/pdf.js"></script>
+	<script src="//s0.pstatp.com/cdn/expire-1-M/pdf.js/2.2.2/pdf.worker.js"></script>
 	<script src="//s0.pstatp.com/cdn/expire-1-M/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 	<link href="//s0.pstatp.com/cdn/expire-1-M/fancybox/3.5.7/jquery.fancybox.min.css" rel="stylesheet" />
 	<style>
@@ -1037,13 +1039,23 @@
 							}
 							break;
 						case 'pdffile':
-							let pdfsrc = document.createElement('embed');
-							pdfsrc.setAttribute('style', 'width: 100%; height: 100%; margin:0px;');
-							pdfsrc.setAttribute('type', 'application/pdf');
-							pdfsrc.setAttribute('src', url);
-							content.setAttribute('style', 'height: 80%;');
 							content.innerHTML = '';
-							content.append(pdfsrc);
+							content.append('<canvas id="pdf-canvas"></canvas>');
+							PDFJS.getDocument(url).then((pdf) => {
+								return pdf.getPage(1);
+							}).then((page) => {
+								var scale = 1.5; // 设置展示比例
+								var viewport = page.getViewport(scale); // 获取pdf尺寸
+								var canvas = document.getElementById('pdf-canvas'); // 获取需要渲染的元素
+								var context = canvas.getContext('2d');
+								canvas.height = viewport.height;
+								canvas.width = viewport.width;
+								var renderContext = {
+									canvasContext: context,
+									viewport: viewport
+								};
+								page.render(renderContext);
+							});
 							break;
 						default:
 							content.style['text-align'] = 'center';
@@ -1425,7 +1437,7 @@
 			</div>
 		</div>
 	</div>
-	<script>console.log('Ver:202001071431');</script>
+	<script>console.log('Ver:202001071449');</script>
 </body>
 
 </html>
