--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 	<script src="//s0.pstatp.com/cdn/expire-1-M/ionicons/4.5.6/ionicons.js"></script>
 	<link rel="shortcut icon" href="//blog.vircloud.net/favicon.ico">
 	<link rel="apple-touch-icon-precomposed" type="image/png" href="//blog.vircloud.net/favicon.png">
-	<script src="//s0.pstatp.com/cdn/expire-1-M/marked/0.6.2/marked.min.js"></script>
-	<script src="//s0.pstatp.com/cdn/expire-1-M/highlight.js/9.15.6/highlight.min.js"></script>
-	<link href="//s0.pstatp.com/cdn/expire-1-M/highlight.js/9.15.6/styles/github.min.css" rel="stylesheet" />
-	<link href="//s0.pstatp.com/cdn/expire-1-M/github-markdown-css/3.0.1/github-markdown.min.css" rel="stylesheet" />
-	<script src="//s0.pstatp.com/cdn/expire-1-M/jquery/3.4.0/jquery.min.js"></script>
-	<script src="//s0.pstatp.com/cdn/expire-1-M/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-	<link href="//s0.pstatp.com/cdn/expire-1-M/fancybox/3.5.7/jquery.fancybox.min.css" rel="stylesheet" />
+	<script src="//cdn.jsdelivr.net/npm/ionicons@4.5.6/dist/ionicons.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/marked@0.6.2/marked.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/highlight.js@9.15.6/lib/highlight.min.js"></script>
+	<link href="//cdn.jsdelivr.net/npm/highlight.js@9.15.6/styles/github.min.css" rel="stylesheet" />
+	<link href="//cdn.jsdelivr.net/npm/github-markdown-css@3.0.1/github-markdown.min.css" rel="stylesheet" />
+	<script src="//cdn.jsdelivr.net/npm/jquery@3.4.0/dist/jquery.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+	<link href="//cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" rel="stylesheet" />
 	<style>
 		.password-wrapper {
 			display: flex;
