--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
 			document.querySelector('.site').textContent = window.GLOBAL_CONFIG.SITE_NAME;
 			window.api = {
 				root: '/',
-				url: 'https://od.vcloud.workers.dev/',
+				url: 'https://odd.vcloud.workers.dev/',
 				method: 'POST',
 				formatPayload: (path, passwd) => {
 					return '?path=' + encodeURIComponent(path) +
